--- a/_posts/2020-01-02-hurst-1.md
+++ b/_posts/2020-01-02-hurst-1.md
@@ -296,9 +296,7 @@ A time series of length ${x_t}$, the local Hurst exponent at the ith time point 
 
 
 
-The local Hurst index can be used to reflect the sentiment of the stock market in a certain period of time, and determine whether the market will show an upward trend, a downward trend, or a random trend in the future. We expect to use the local Hurst index to study this trend. Because the size of the local Hurst index is closely related to the choice of the time window length, the choice of the length of the time window is very important. Most studies point out that the length of the time window should be the average cycle period, but on the other hand, from the perspective of economics, in order to eliminate the market impact caused by the supply and demand cycle, the length of the time window is preferably not more than the length of trading year. Based on the above reasons, we chose 220 trading days as the local Hurst The length of the exponential time window. Theoretically, when the Hurst index is 0.5, the market is in a random state and lacks direction selectivity. However, the local Hurst index of the stock market is usually higher than 0.5. Therefore, in order to more realistically capture the time of market direction conversion and determine the trading strategy, we indicate the expected Hurst index for a specific time window length. The algorithm of the Hurst exponent is similar to the algorithm of the Hurst index, that is, it is obtained by using ols on 
-
-$\log \left\{\mathrm{E}\left[(\mathrm{R} / \mathrm{S})_{\mathrm{n}}\right]\right\}$ and $log(n)$. To calculate $\mathrm{E}\left[(\mathrm{R} / \mathrm{S})_{\mathrm{n}}\right]$, we use the following formula proposed by Peters:
+The local Hurst index can be used to reflect the sentiment of the stock market in a certain period of time, and determine whether the market will show an upward trend, a downward trend, or a random trend in the future. We expect to use the local Hurst index to study this trend. Because the size of the local Hurst index is closely related to the choice of the time window length, the choice of the length of the time window is very important. Most studies point out that the length of the time window should be the average cycle period, but on the other hand, from the perspective of economics, in order to eliminate the market impact caused by the supply and demand cycle, the length of the time window is preferably not more than the length of trading year. Based on the above reasons, we chose 220 trading days as the local Hurst The length of the exponential time window. Theoretically, when the Hurst index is 0.5, the market is in a random state and lacks direction selectivity. However, the local Hurst index of the stock market is usually higher than 0.5. Therefore, in order to more realistically capture the time of market direction conversion and determine the trading strategy, we indicate the expected Hurst index for a specific time window length. The algorithm of the Hurst exponent is similar to the algorithm of the Hurst index,we use the following formula proposed by Peters:
 
 $$
 E(R / S)_{n}=[(n-0.5) / n] \times[n \times(\pi / 2)]^{-0.5} \times \sum_{r=1}^{n-1} \sqrt{(\mathrm{n}-r) / r}
