--- a/_posts/2020-01-02-hurst-1.md
+++ b/_posts/2020-01-02-hurst-1.md
@@ -12,6 +12,8 @@ tags:
 mathjax: True
 ---
 
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=167876&auto=1&height=66"></iframe>
+
 ![2401](http://pic.netbian.com/uploads/allimg/190305/212112-1551792072f791.jpg)
 
 
