--- a/_posts/2019-12-21-xiejie.md
+++ b/_posts/2019-12-21-xiejie.md
@@ -13,7 +13,7 @@ music-id-foot: 477913475
 ---
 
 最近很喜欢阿细的歌，分享一下
-<embed src="//music.163.com/style/swf/widget.swf?sid=1332566421&type=2&auto=1&width=320&height=66" width="340" height="86"  allowNetworking="all"></embed>
+<embed src="//music.163.com/style/swf/widget.swf?sid=1332566421&type=2&auto=1&width=320&height=66" width="340" height="86"  allowNetworking="all"/>
 
 
 
