--- a/_posts/2019-12-21-xiejie.md
+++ b/_posts/2019-12-21-xiejie.md
@@ -13,8 +13,8 @@ music-id-foot: 477913475
 ---
 
 最近很喜欢阿细的歌，分享一下
-<embed src="//music.163.com/style/swf/widget.swf?sid=1332566421&type=2&auto=1&width=320&height=66" width="340" height="86"  allowNetworking="all"/>
 
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="330" height="86" src="//music.163.com/outchain/player?type=2&id=1332566421&auto=1&height=66"></iframe>
 
 
 <div align="center"><img src='https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1576946982534&di=147597ce2485cccb35c1ca6dafc3fca8&imgtype=0&src=http%3A%2F%2Fimg3.doubanio.com%2Fview%2Fnote%2Fl%2Fpublic%2Fp57262752.jpg'/></div><div align="center">
