--- a/_posts/2020-01-02-hurst-1.md
+++ b/_posts/2020-01-02-hurst-1.md
@@ -11,8 +11,8 @@ tags:
   - 量化投资
 mathjax: True
 ---
-<embed src="//music.163.com/style/swf/widget.swf?sid=167876&type=2&auto=1&width=320&height=66" width="340" height="86"  allowNetworking="all" >
 
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="330" height="86" src="//music.163.com/outchain/player?type=2&id=167876&auto=1&height=66"></iframe>
 
 ![2401](http://pic.netbian.com/uploads/allimg/190305/212112-1551792072f791.jpg)
 
